figured out how to use lodash in app.js

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 		"url": "http://www.joshuatuckerpdx.com"
 	},
 	"dependencies": {
-		"express": "*"
+		"browserify-fs": "*",
+		"express": "*",
+		"lodash": "*"
 	}
 }
